Fixes issue of guide point audio overlapping stop audio.

--- a/wordpress/vr/css/style.css
+++ b/wordpress/vr/css/style.css
@@ -131,8 +131,6 @@ html, body {
 
 #hotspot-image-container {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   min-width: 30%;
 }
 
@@ -176,9 +174,10 @@ html, body {
 }
 
 #hotspot-full-image {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   margin: auto;
+  object-fit: contain;
 }
 
 .interest {
